[project]
name = "sap-gui-engine"
version = "0.3.0"
description = "Python framework for SAP GUI Scripting/Automation"
readme = "README.md"
authors = [{ name = "fnxL", email = "ajaykanki18@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["pywinauto>=0.6.9"]
license = { file = "LICENSE" }
keywords = [
    "sap",
    "sap automation",
    "sap gui",
    "sap gui automation",
    "sap gui scripting",
    "sap gui scripting api",
    "sap gui api",
    "sap scripting automation",
    "sap scripting",
    "enterprise automation",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries",
]


[project.urls]
Homepage = "https://github.com/fnxL/sap-gui-engine"
Repository = "https://github.com/fnxL/sap-gui-engine"
Issues = "https://github.com/fnxL/sap-gui-engine/issues"


[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pydantic-settings>=2.13.1", "pytest>=9.0.2"]
